--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,12 +29,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  splashscreen: ^1.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.17.4
+  animated_splash_screen: ^1.1.0
   # form_field_validator: ^5.0.5
 
 dev_dependencies:
